--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,94 @@
 @import 'reset.css';
 
-html{
+html {
     background: black;
-    font-family: arial;
-    color: white;
-    font-size: 36px;
 }
 
-
-
-p{
-    font-size: 36px;
+p {
+    font-size: 1.75vw;
     line-height: 1.4;
     padding-bottom: 25px;
+    font-family: arial;
+    color: white;
 }
+
 /*  SECTIONS  */
 .section {
-	clear: both;
-	padding: 0px;
-	margin: 0px;
+    clear: both;
+    padding: 0px;
+    margin: 0px;
     margin-left: 5%;
     margin-right: 5%;
     padding-bottom: 250px;
 }
 
+img{
+    width: 100%;
+}
 /*  COLUMN SETUP  */
 .col {
-	display: block;
-	float:left;
-	margin: 1% 0 1% 5%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 5%;
 }
-.col:first-child { margin-left: 0; }
+
+.col:first-child {
+    margin-left: 0;
+}
 
 /*  GROUPING  */
 .group:before,
-.group:after { content:""; display:table; }
-.group:after { clear:both;}
-.group { zoom:1; /* For IE 6/7 */ }
+.group:after {
+    content: "";
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    zoom: 1;
+    /* For IE 6/7 */
+}
 
 /*  GRID OF SIX  */
 .span_6_of_6 {
-	width: 100%;
+    width: 100%;
 }
 
 .span_5_of_6 {
-  	width: 82.5%;
+    width: 82.5%;
 }
 
 .span_4_of_6 {
-  	width: 65%;
+    width: 65%;
 }
 
 .span_3_of_6 {
-  	width: 47.5%;
+    width: 47.5%;
 }
 
 .span_2_of_6 {
-  	width: 30%;
+    width: 30%;
 }
 
 .span_1_of_6 {
-  	width: 12.5%;
+    width: 12.5%;
 }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
-	.col {  margin: 1% 0 1% 0%; }
-	.span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+    .col {
+        margin: 1% 0 1% 0%;
+    }
+
+    .span_1_of_6,
+    .span_2_of_6,
+    .span_3_of_6,
+    .span_4_of_6,
+    .span_5_of_6,
+    .span_6_of_6 {
+        width: 100%;
+    }
 }
