--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@ p {
     color: white;
 }
 
+h1{
+    font-size: 1.3vw;
+    line-height: 1.4;
+    font-family: arial;
+    color: white;
+    margin-left: 17.5vw;
+}
+
 /*  SECTIONS  */
 .section {
     clear: both;
@@ -24,6 +32,13 @@ p {
 
 img{
     width: 100%;
+}
+
+.regular{
+    width: 65vw;
+    margin-left: 17.5vw;
+    margin-right: 17.vw;
+    margin-top: 100px;
 }
 /*  COLUMN SETUP  */
 .col {
