--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ h2{
     margin-left: 26.25%;
     margin-right: 26.25%;
 }
+
+
+.webs{
+    margin-top: -150px;
+    width: 47.5%;
+    margin-left: 26.25%;
+    margin-right: 26.25%;
+}
 /*  SECTIONS  */
 .section {
     clear: both;
