--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,13 @@ h2{
     margin-left: 26.25%;
     margin-right: 26.25%;
 }
+
+.mscreens{
+    width: 47.5%;
+    margin-left: 26.25%;
+    margin-right: 26.25%;
+}
+
 /*  SECTIONS  */
 .section {
     clear: both;
