--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ img{
     width:  65%;
     margin-left: 17.5%;
     margin-right: 17.5%;
-    margin-top: -150px;
-    margin-bottom: 100px;
+/*    margin-top: -150px;*/
+/*    margin-bottom: 100px;*/
 }
 /*  COLUMN SETUP  */
 .col {
