--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,18 @@ h2{
     margin-bottom: 15px;
 }
 
-
+.headers{
+    margin-top: 10vh;
+}
 .spacer0{
-margin: 500px;}
+margin: 50vh;}
 
 .spacer{
-    margin: 250px;
+    margin: 25vw;
 }
 
 .spacer2{
-margin:100px;}
+margin:10vh;}
 
 
 .wz{
@@ -157,7 +159,7 @@ img{
 }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 100px) {
     .col {
         margin: 1% 0 1% 0%;
     }
@@ -170,4 +172,33 @@ img{
     .span_6_of_6 {
         width: 100%;
     }
+}
+
+@media only screen and (max-width: 600px) {
+    p {
+    font-size: 3vw;
+    line-height: 1.3;
+    padding-bottom: 15px;
+    font-family: arial;
+    color: white;
+}
+    .col {
+        margin: 1% 0 1% 0%;
+    }
+    
+    .span_2_of_6,
+    .span_4_of_6{
+        width: 100%;
+    }
+    
+
+
+    .headers{
+        margin-top: 25px;
+    }
+
+.spacer0{
+margin: 100px;}
+
+
 }
