--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ margin:10vh;}
     margin-right: 26.25%;
 }
 
+
+
 /*  SECTIONS  */
 .section {
     clear: both;
@@ -154,6 +156,19 @@ img{
     width: 30%;
 }
 
+
+
+
+.span_2_of_6a {
+    width: 30%;
+}
+
+.span_4_of_6a {
+    width: 65%;
+}
+
+
+
 .span_1_of_6 {
     width: 12.5%;
 }
@@ -161,7 +176,7 @@ img{
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 100px) {
     .col {
-        margin: 1% 0 1% 0%;
+        margin: 0% 0 1% 5%;
     }
 
     .span_1_of_6,
@@ -176,29 +191,39 @@ img{
 
 @media only screen and (max-width: 600px) {
     p {
+/*    padding-left: -5%;*/
     font-size: 3vw;
     line-height: 1.3;
     padding-bottom: 15px;
     font-family: arial;
     color: white;
 }
-    .col {
-        margin: 1% 0 1% 0%;
-    }
-    
-    .span_2_of_6,
-    .span_4_of_6{
-        width: 100%;
-    }
-    
 
 
-    .headers{
-        margin-top: 25px;
-    }
 
+ .headers{
+    margin-top: 25px;
+}
 .spacer0{
-margin: 100px;}
+margin: 150px;}
 
+.spacer{
+    margin: 25px;
+}
 
+.spacer2{
+margin:25px;}
+
+    h2{
+    font-size: 2vw;
+    line-height: 1.3;
+    font-family: arial;
+    color: white;
+    margin-left: 0%;
+    margin-bottom: 15px;
+}
+    
+ 
+    
+    
 }
