--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ margin: 50vh;}
 }
 
 .spacer2{
-margin:10vh;}
+margin:3%;}
 
 
 .wz{
@@ -219,7 +219,7 @@ margin: 150px;}
 }
 
 .spacer2{
-margin:25px;}
+margin:3%;}
 
     h2{
     font-size: 3vw;
